Feat: 입력값의 검증 조건 클래스
검증을 하는 로직을 따로 클래스로 만들었다